Updated ImageDetermine info data

--- a/ImageDetermine/Profuct_Beta/フォルダ構成.md
+++ b/ImageDetermine/Profuct_Beta/フォルダ構成.md
@@ -1,4 +1,4 @@
-1. フォルダ構成
+# 1. フォルダ構成
 以下にオプション装置のフォルダ構成を簡単に示す。一部ファイル省略または一例を表記する。
 Profuct_Bata
  ┣DATABASE
@@ -315,14 +315,14 @@ Profuct_Bata
  ┣フォルダ構成
  ┗メモ
 
-2. 説明
+# 2. 説明
     2.1 DATABASE
         オプション装置のデータベース関係のファイルをまとめているフォルダ。
         DB_option.dbがデータベース本体で、SQLCommunication,pyがデータベース接続のプログラムになっている
     2.2 IMG_DTRMN
         外観検査処理関係のファイルがまとめられているフォルダ。
-        ImgDtrmn_lib.pyが実際に動かす際に読み込むプログラム。
-        resultsフォルダに検査画像と結果が格納される。
+        ImgDtrmn_lib.pyがライブラリ全体をまとめているファイル。
+        resultsフォルダに検査画像と結果が格納される。inference_test.jsonに全推論結果(MAE)が保存されている。defective_images及びdifference_imagesは不良発生時のみ生成
     2.3 MAIN_OPRATION
         主動作時のプログラムファイルが入っているフォルダ
         MainOpration.pyが主動作のプログラム。
