Updated image determine info (clean up)

--- a/ImageDetermine/Profuct_Beta/フォルダ構成.md
+++ b/ImageDetermine/Profuct_Beta/フォルダ構成.md
@@ -1,371 +1,134 @@
-# 1. フォルダ構成
-以下にオプション装置のフォルダ構成を簡単に示す。一部ファイル省略または一例を表記する。
-Profuct_Bata
- ┣DATABASE
- ┃┣create_database.py
- ┃┣DB_option.db
- ┃┣export.csv
- ┃┗SQLCommunication.py
- ┃
- ┣IMG_DTRMN
- ┃┣CaptureData
- ┃┃┗Curent_Capture.py
- ┃┣results
- ┃┃┣defctive_images
- ┃┃┃┗defective_○○○○○○○○_○○○○○○_○○○○○○.png
- ┃┃┣diff_images
- ┃┃┃┗diff_○○○○○○○○_○○○○○○_○○○○○○.jpg
- ┃┃┗json
- ┃┃ ┗result_○○○○○○○○_○○○○○○_○○○○○○.json
- ┃┗Cmr_Lib.py
- ┃
- ┣MAIN_OPRATION
- ┃┣GUI
- ┃┃┣Constants
- ┃┃┃┣active_text.py
- ┃┃┃┣base_constant.py
- ┃┃┃┣color.py
- ┃┃┃┣count_constant.py
- ┃┃┃┣data_constant.py
- ┃┃┃┣error_text.py
- ┃┃┃┣file_path.py
- ┃┃┃┣judge_result.py
- ┃┃┃┣main_constant.py
- ┃┃┃┣normal.py
- ┃┃┃┣opration_status.py
- ┃┃┃┣opratingmanager_constant.py
- ┃┃┃┣pass_constant.py
- ┃┃┃┣popup_message.py
- ┃┃┃┣popup_name.py
- ┃┃┃┣popup_text.py
- ┃┃┃┣screen_name.py
- ┃┃┃┣stop_text.py
- ┃┃┃┣vision_constant.py
- ┃┃┃┗worning_constant.py
- ┃┃┣Images
- ┃┃┃┣background
- ┃┃┃┃┣base.png
- ┃┃┃┃┗password.png
- ┃┃┃┣button
- ┃┃┃┃┣button_0.png
- ┃┃┃┃┣button_1.png
- ┃┃┃┃┣button_2.png
- ┃┃┃┃┣button_3.png
- ┃┃┃┃┣button_4.png
- ┃┃┃┃┣button_5.png
- ┃┃┃┃┣button_6.png
- ┃┃┃┃┣button_7.png
- ┃┃┃┃┣button_8.png
- ┃┃┃┃┣button_9.png
- ┃┃┃┃┣button_adsrption.png
- ┃┃┃┃┣button_back.png
- ┃┃┃┃┣button_change.png
- ┃┃┃┃┣button_clr.png
- ┃┃┃┃┣button_count.png
- ┃┃┃┃┣button_cylinder_down.png
- ┃┃┃┃┣button_cylinder_up.png
- ┃┃┃┃┣button_data.png
- ┃┃┃┃┣button_dbreset.png
- ┃┃┃┃┣button_down.png
- ┃┃┃┃┣button_end.png
- ┃┃┃┃┣button_ent.png
- ┃┃┃┃┣button_error.png
- ┃┃┃┃┣button_fulldown.png
- ┃┃┃┃┣button_fullup.png
- ┃┃┃┃┣button_motion_move.png
- ┃┃┃┃┣button_motion_vision.png
- ┃┃┃┃┣button_motion.png
- ┃┃┃┃┣button_motor_nomal.png
- ┃┃┃┃┣button_motor_vision.png
- ┃┃┃┃┣button_seven.png
- ┃┃┃┃┣button_solenoid.png
- ┃┃┃┃┣button_staping.png
- ┃┃┃┃┣button_today.png
- ┃┃┃┃┣button_up.png
- ┃┃┃┃┗button_down.png
- ┃┃┃┣exptxt
- ┃┃┃┃┣error.png
- ┃┃┃┃┣exptxt_count.png
- ┃┃┃┃┣exptxt_data.png
- ┃┃┃┃┣exptxt_error.png
- ┃┃┃┃┣exptxt_fail.png
- ┃┃┃┃┣exptxt_lamp.png
- ┃┃┃┃┣exptxt_motion.png
- ┃┃┃┃┣exptxt_new_pass.png
- ┃┃┃┃┣exptxt_retry_pass.png
- ┃┃┃┃┣exptxt_rock.png
- ┃┃┃┃┣exptxt_seven.png
- ┃┃┃┃┣exptxt_target.png
- ┃┃┃┃┣exptxt_today.png
- ┃┃┃┃┣exptxt_vision.png
- ┃┃┃┃┣exptxt_warning.png
- ┃┃┃┃┣exptxt_work_in.png
- ┃┃┃┃┣exptxt_work_out.png
- ┃┃┃┃┗no_image.png
- ┃┃┃┣sample
- ┃┃┃┃┗20240712_100033-02.jpg
- ┃┃┃┗title
- ┃┃┃ ┣title_change_pass.png
- ┃┃┃ ┣title_count.png
- ┃┃┃ ┣title_data.png
- ┃┃┃ ┣title_main.png
- ┃┃┃ ┣title_motion_move.png
- ┃┃┃ ┣title_motion_vision.png
- ┃┃┃ ┣title_motion.png
- ┃┃┃ ┣title_pass.png
- ┃┃┃ ┗title_vision.png
- ┃┃┣Managers
- ┃┃┃┣OperatingManager.py
- ┃┃┃┣PopupManager.py
- ┃┃┃┗ScreenManager.py
- ┃┃┣Parts
- ┃┃┃┣Background.py
- ┃┃┃┣Blackout.py
- ┃┃┃┣Button.py
- ┃┃┃┣CaluclatePopup.py
- ┃┃┃┣CountList.py
- ┃┃┃┣DrawTable.py
- ┃┃┃┗Picture.py
- ┃┃┣Popups
- ┃┃┃┣BasePopup.py
- ┃┃┃┣EndPopup.py
- ┃┃┃┣ErrorPopup.py
- ┃┃┃┣PassPopup.py
- ┃┃┃┣ResetPopup.py
- ┃┃┃┣StopPopup.py
- ┃┃┃┣TextPopup.py
- ┃┃┃┗WarningPopup.py
- ┃┃┣Screens
- ┃┃┃┣BaseScreen.py
- ┃┃┃┣CountScreen.py
- ┃┃┃┣DataScreen.py
- ┃┃┃┣MainScreen.py
- ┃┃┃┣PassScreen.py
- ┃┃┃┗VisionScreen.py
- ┃┃┗MainUIManager.py
- ┃┗MainOpration.py
- ┃
- ┣MEINTENANCE
- ┃┣BACK
- ┃┃┣BackEndManager_list.py
- ┃┃┗BackEndManager.py
- ┃┣CONSTANTS
- ┃┃┣command_type.py
- ┃┃┣command.py
- ┃┃┣error_text.py
- ┃┃┣move_moter_pos.py
- ┃┃┣operation_status.py
- ┃┃┣pless_command.py
- ┃┃┣que_index.py
- ┃┃┣serial_result.py
- ┃┃┣stop_text.py
- ┃┃┗ui_plc_pc_command.py
- ┃┣GUI
- ┃┃┣constants
- ┃┃┃┣popup_configs
- ┃┃┃┃┣Back_config.py
- ┃┃┃┃┣base_config.py
- ┃┃┃┃┣Operation_config.py
- ┃┃┃┃┣pass_error_config.py
- ┃┃┃┃┗Reset_config.py
- ┃┃┃┣screen_configs
- ┃┃┃┃┣change_pass_config.py
- ┃┃┃┃┣main_config.py
- ┃┃┃┃┣move_config.py
- ┃┃┃┃┗vision_config.py
- ┃┃┃┣button_result.py
- ┃┃┃┣color.py
- ┃┃┃┣file_path.py
- ┃┃┃┣popup_name.py
- ┃┃┃┣popup_text.py
- ┃┃┃┣screen_name.py
- ┃┃┃┗UIManager_constant.py
- ┃┃┣images
- ┃┃┃┣background
- ┃┃┃┃┣base.png
- ┃┃┃┃┗password.png
- ┃┃┃┣buttons
- ┃┃┃┃┣_debag.png
- ┃┃┃┃┣button_0.png
- ┃┃┃┃┣button_1.png
- ┃┃┃┃┣button_2.png
- ┃┃┃┃┣button_3.png
- ┃┃┃┃┣button_4.png
- ┃┃┃┃┣button_5.png
- ┃┃┃┃┣button_6.png
- ┃┃┃┃┣button_7.png
- ┃┃┃┃┣button_8.png
- ┃┃┃┃┣button_9.png
- ┃┃┃┃┣button_adsorption_on_off.png
- ┃┃┃┃┣button_adsorption.png
- ┃┃┃┃┣button_back.png
- ┃┃┃┃┣button_change.png
- ┃┃┃┃┣button_clr.png
- ┃┃┃┃┣button_cylinder_down.png
- ┃┃┃┃┣button_cylinder_up.png
- ┃┃┃┃┣button_dbreset.png
- ┃┃┃┃┣button_ent.png
- ┃┃┃┃┣button_light.png
- ┃┃┃┃┣button_motor_nomal.png
- ┃┃┃┃┣button_motor_reverse.png
- ┃┃┃┃┣button_moving.png
- ┃┃┃┃┣button_no.png
- ┃┃┃┃┣button_solenoid.png
- ┃┃┃┃┣button_vision.png
- ┃┃┃┃┣button_yes.png
- ┃┃┃┃┗旧button_moving.png
- ┃┃┃┣exp
- ┃┃┃┃┣exptxt_error.png
- ┃┃┃┃┣exptxt_fail.png
- ┃┃┃┃┣exptxt_lamp.png
- ┃┃┃┃┣exptxt_new_pass.png
- ┃┃┃┃┣exptxt_retry_pass.png
- ┃┃┃┃┣exptxt_rock.png
- ┃┃┃┃┣exptxt_target.png
- ┃┃┃┃┣exptxt_work_in.png
- ┃┃┃┃┗exptxt_work_out.png
- ┃┃┃┗titles
- ┃┃┃┃┣title_change_pass.png
- ┃┃┃┃┣title_move.png
- ┃┃┃┃┣title_select.png
- ┃┃┃┃┗title_vison.png
- ┃┃┣managers
- ┃┃┃┣OperatingManager.py
- ┃┃┃┣PopupManager.py
- ┃┃┃┗ScreenManager.py
- ┃┃┣parts
- ┃┃┃┣Background.py
- ┃┃┃┣Blackout.py
- ┃┃┃┣Button.py
- ┃┃┃┣ButtonAtLamp.py
- ┃┃┃┣Lamp.py
- ┃┃┃┗Picture.py
- ┃┃┣popups
- ┃┃┃┣BackPopup.py
- ┃┃┃┣BasePopup.py
- ┃┃┃┣ErrorPopup.py
- ┃┃┃┣OperationPopup.py
- ┃┃┃┣PassErrorPopup.py
- ┃┃┃┣ResetPopup.py
- ┃┃┃┗TextPopup.py
- ┃┃┣screens
- ┃┃┃┣BaseScreen.py
- ┃┃┃┣ChangePassScreen.py
- ┃┃┃┣MoveScreen.py
- ┃┃┃┣SelectScreen.py
- ┃┃┃┗VisionScreen.py
- ┃┃┣ListUIManager.py
- ┃┃┗UIManager.py
- ┃┣QUEUE
- ┃┃┣QueueManager_list.py
- ┃┃┗QueueManager.py
- ┃┣Maintenance_list.py
- ┃┗Maintenance.py
- ┃
- ┣results
- ┃┣defctive_images
- ┃┣diff_images
- ┃┣json
- ┃┣benchmark.py
- ┃┣defictive_test.json
- ┃┣flawless_test.json
- ┃┣inference_test_copy.json
- ┃┣inference_test_0213.json
- ┃┣inference_test.json
- ┃┗visualize.py
- ┃
- ┣SERIAL
- ┃┣constant
- ┃┃┣Format.py
- ┃┃┣Status.py
- ┃┃┗Work_status.py
- ┃┣dict
- ┃┃┣Dict.py
- ┃┃┣error.py
- ┃┃┣normal.py
- ┃┃┗plc_cmd.py
- ┃┣logs
- ┃┃┣debug_log.txt
- ┃┃┗error_log.txt
- ┃┣manager
- ┃┃┣dict_manager.py
- ┃┃┣plc_base_handler.py
- ┃┃┣plc_communicator.py
- ┃┃┣loc_signal_handler.py
- ┃┃┣plc_Simulator.py
- ┃┃┣serial_communicator.py
- ┃┃┗SerialUIBridge.py
- ┃┣test
- ┃┃┣test_plc.py
- ┃┃┣test_serial_error.py
- ┃┃┣test_serial_receive.py
- ┃┃┣test_serial_send.py
- ┃┃┗test_simulator.py
- ┃┣__init__.py
- ┃┗serial_gate.py
- ┃
- ┣UTILS
- ┃┣__init__.py
- ┃┣log_config.py
- ┃┗type_check.py
- ┃
- ┣main.bat
- ┣main.py
- ┣test.py
- ┣フォルダ構成
- ┗メモ
+# フォルダ構成
 
-# 2. 説明
-    2.1 DATABASE
-        オプション装置のデータベース関係のファイルをまとめているフォルダ。
-        DB_option.dbがデータベース本体で、SQLCommunication,pyがデータベース接続のプログラムになっている
-    2.2 IMG_DTRMN
-        外観検査処理関係のファイルがまとめられているフォルダ。
-        ImgDtrmn_lib.pyがライブラリ全体をまとめているファイル。
-        resultsフォルダに検査画像と結果が格納される。inference_test.jsonに全推論結果(MAE)が保存されている。defective_images及びdifference_imagesは不良発生時のみ生成
-    2.3 MAIN_OPRATION
-        主動作時のプログラムファイルが入っているフォルダ
-        MainOpration.pyが主動作のプログラム。
-        GUIのフォルダの中身は以下のようになっている。
-        Constant : 定数やローカル変数の定義を行っているプログラムファイル
-        Images   : 使用する画像データ
-        Managers : ポップアップ、スクリーン、稼働状況を管理するクラスが記載されたプログラムファイル
-        Parts    : ボタンなどの部品のクラスが記載されたプログラムファイル
-        Popups   : 各種ポップアップ画面のプログラムファイル
-        Screens  : 各種画面のプログラムファイル
-        また、MainUIManager.pyが、主動作時のUI制御プログラムとなっている。
-    2.4 MEINTENANCE
-        動作確認時のプログラムファイルなどが入っているフォルダ
-        Maintenance_list.pyが動作確認のプログラム。
-        フォルダの中身は以下のようになっている。
-        BACK        : シリアル通信などのバックエンド処理を行うプログラムファイル
-        CONSTANTS   : BACKとGUIで共通して使用する定数などを宣言したプログラムファイル
-        GUI         : GUI関係のプログラムファイル等(MAIN_OPRATIONのGUIフォルダと同じ構成になっている)
-        QUEUE       : GUIとバックエンドをつなぐためのキューを管理するクラスを定義したプログラムファイル
-        ファイル名の前や後ろにListとついているプログラムが、現在使用しているプログラムになっている。
-    2.5 results
-        最適な閾値を判定するプログラム等が入っているフォルダ。
-    2.6 SERIAL
-        シリアル通信関係のプログラムファイル等が入っているフォルダ。
-        主動作ではserial_gate.pyを、動作確認ではSeraiUIBridge.pyを使用している。
-        フォルダの中身は以下のようになっている。
-        constant    : 定数やローカル変数の定義を行っているプログラムファイル
-        dict        : 辞書型の定数を定義したプログラムファイル
-        logs        : シリアル通信に関係したログ
-        manager     : シリアル通信を制御するプログラムファイル
-        test        : シリアル通信のテストで使用したプログラム
-    2.7 UTILS
-        シリアル通信で使用しているユーティリティプログラムが入っているフォルダ。
-    2.8 main.bat
-        オプション装置のバッチファイル。
-        ショートカットを作成してスタートアップやデスクトップ画面からの実行の際に使用する。
-    2.9 main.py
-        統括プログラム。実際に実行する場合はこのプログラムを動かしてください。
-    2.10 test.py
-        テストで使用したファイル。
-    2.11 フォルダ構成
-        本ファイル。
-    2.12 メモ
-        プログラムの結合を行う際に作成したファイル。ファイル構成などが古いため参照は非推奨。
-    2.13 ファイル一覧.txt
-        コマンドで生成したファイル一覧。省略したフォルダなども記載されている。
+## 1. フォルダ概要
+
+以下にオプション装置のフォルダ構成を示します（一部省略あり）。
+
+```
+Product_Data/
+├── DATABASE/
+│   ├── create_database.py
+│   ├── DB_option.db
+│   ├── export.csv
+│   └── SQLCommunication.py
+│
+├── IMG_DTRMN/
+│   ├── CaptureData/
+│   │   └── Current_Capture.py
+│   ├── results/
+│   │   ├── defective_images/
+│   │   │   └── defective_XXXXXXXX_XXXXXX_XXXXXX.png
+│   │   ├── diff_images/
+│   │   │   └── diff_XXXXXXXX_XXXXXX_XXXXXX.jpg
+│   │   ├── json/
+│   │   │   └── result_XXXXXXXX_XXXXXX_XXXXXX.json
+│   └── Cmr_Lib.py
+│
+├── MAIN_OPERATION/
+│   ├── MainOperation.py
+│   ├── GUI/
+│   │   ├── Constants/
+│   │   ├── Images/
+│   │   ├── Managers/
+│   │   ├── Parts/
+│   │   ├── Popups/
+│   │   ├── Screens/
+│   │   └── MainUIManager.py
+│
+├── MAINTENANCE/
+│   ├── Maintenance_list.py
+│   ├── Maintenance.py
+│   ├── BACK/
+│   ├── CONSTANTS/
+│   ├── GUI/
+│   ├── QUEUE/
+│
+├── results/
+│   ├── defective_images/
+│   ├── diff_images/
+│   ├── json/
+│   ├── benchmark.py
+│   ├── inference_test.json
+│   └── visualize.py
+│
+├── SERIAL/
+│   ├── serial_gate.py
+│   ├── manager/
+│   ├── logs/
+│   ├── test/
+│   ├── dict/
+│   ├── constant/
+│   └── SerialUIBridge.py
+│
+├── UTILS/
+│   ├── log_config.py
+│   └── type_check.py
+│
+├── main.bat
+├── main.py
+├── test.py
+└── メモ/
+```
+
+## 2. 各フォルダの説明
+
+### 2.1 DATABASE
+データベース関連のファイルを格納。
+- `DB_option.db` : データベース本体
+- `SQLCommunication.py` : データベース接続プログラム
+
+### 2.2 IMG_DTRMN
+外観検査処理に関するファイルを格納。
+- `results/` : 検査画像と結果を保存
+- `inference_test.json` : 全推論結果（MAE）
+- `defective_images/` と `diff_images/` : 不良発生時のみ生成
+
+### 2.3 MAIN_OPERATION
+主動作に関するプログラムを格納。
+- `MainOperation.py` : 主動作プログラム
+- `GUI/` : UI関連のプログラムや画像
+  - `Constants/` : 定数・ローカル変数の定義
+  - `Images/` : 使用する画像データ
+  - `Managers/` : ポップアップやスクリーン管理
+  - `Parts/` : ボタンなどのUI部品
+  - `Popups/` : ポップアップ画面の処理
+  - `Screens/` : 各種画面の処理
+  - `MainUIManager.py` : UI制御プログラム
+
+### 2.4 MAINTENANCE
+動作確認用のプログラムを格納。
+- `Maintenance_list.py` : 動作確認用プログラム
+- `BACK/` : シリアル通信などのバックエンド処理
+- `CONSTANTS/` : 共通定数
+- `GUI/` : UI関係（MAIN_OPERATIONのGUIと同構成）
+- `QUEUE/` : GUIとバックエンドをつなぐキュー管理
+
+### 2.5 results
+最適な閾値判定などのプログラムを格納。
+
+### 2.6 SERIAL
+シリアル通信関連のプログラムを格納。
+- `serial_gate.py` : 主動作時の通信
+- `SerialUIBridge.py` : 動作確認時の通信
+- `logs/` : シリアル通信のログ
+- `manager/` : シリアル通信の制御
+- `test/` : シリアル通信のテスト用プログラム
+
+### 2.7 UTILS
+ユーティリティ関連のプログラムを格納。
+
+### 2.8 main.bat
+バッチファイル。スタートアップやデスクトップ実行用。
+
+### 2.9 main.py
+統括プログラム。実行時にこのプログラムを動かす。
+
+### 2.10 test.py
+テスト用のプログラム。
+
+### 2.11 メモ
+開発時の補助ファイル（古いため参照非推奨）。
+
+### 2.12 ファイル一覧.txt
+コマンドで生成したファイル一覧（省略フォルダ含む）。
+
